testsuite/bsc.names/portRenaming/invalidAttrs/prefix/DuplicateAttr.bsv

interface Ifc;
  (* prefix="first", result="res", prefix="second" *)
  method Bool start(Bool a, Bool b);
endinterface

